Archive2/dc/82fddb976c7c37/output
main.cpp: In function 'int main()':
main.cpp:43:13: error: conflicting declaration 'Sales_data total'
  Sales_data total;
             ^
main.cpp:17:13: error: 'total' has a previous declaration as 'Sales_item total'
  Sales_item total;
             ^
